publish lazy example

--- a/docs/lazy_example.ipynb
+++ b/docs/lazy_example.ipynb
@@ -1,15 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Lazy Expression Tutorial\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since `darkwing` is based on the DuckDB relational API, all expressions are \"lazy\" in that they defer evaluation until a result or a data preview is requested.\n",
+    "This allows us to build up complex data processing pipelines iteratively, but without needing to compute extranous intermediate results. Instead, under the hood, DuckDB will gather the sequence of steps and pass it to a query optimizer, which will apply optimizations like predicate and projection pushdown. The full operation will be executed by DuckDB making full use of all the cores available on your machine, streaming the operations if possible, and even spilling to disk if the operation is too large to fit in memory."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T04:24:22.658621Z",
-     "iopub.status.busy": "2024-12-09T04:24:22.657548Z",
-     "iopub.status.idle": "2024-12-09T04:24:22.731919Z",
-     "shell.execute_reply": "2024-12-09T04:24:22.731632Z",
-     "shell.execute_reply.started": "2024-12-09T04:24:22.658589Z"
+     "iopub.execute_input": "2024-12-09T05:28:58.020504Z",
+     "iopub.status.busy": "2024-12-09T05:28:58.020273Z",
+     "iopub.status.idle": "2024-12-09T05:28:58.094591Z",
+     "shell.execute_reply": "2024-12-09T05:28:58.094379Z",
+     "shell.execute_reply.started": "2024-12-09T05:28:58.020476Z"
     }
    },
    "outputs": [],
@@ -22,11 +39,11 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T04:24:22.732315Z",
-     "iopub.status.busy": "2024-12-09T04:24:22.732234Z",
-     "iopub.status.idle": "2024-12-09T04:24:22.896745Z",
-     "shell.execute_reply": "2024-12-09T04:24:22.896466Z",
-     "shell.execute_reply.started": "2024-12-09T04:24:22.732308Z"
+     "iopub.execute_input": "2024-12-09T05:28:58.094996Z",
+     "iopub.status.busy": "2024-12-09T05:28:58.094930Z",
+     "iopub.status.idle": "2024-12-09T05:28:58.258168Z",
+     "shell.execute_reply": "2024-12-09T05:28:58.257979Z",
+     "shell.execute_reply.started": "2024-12-09T05:28:58.094988Z"
     }
    },
    "outputs": [
@@ -68,11 +85,11 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T04:24:22.897881Z",
-     "iopub.status.busy": "2024-12-09T04:24:22.897783Z",
-     "iopub.status.idle": "2024-12-09T04:24:22.902287Z",
-     "shell.execute_reply": "2024-12-09T04:24:22.902104Z",
-     "shell.execute_reply.started": "2024-12-09T04:24:22.897874Z"
+     "iopub.execute_input": "2024-12-09T05:28:58.259142Z",
+     "iopub.status.busy": "2024-12-09T05:28:58.259036Z",
+     "iopub.status.idle": "2024-12-09T05:28:58.263526Z",
+     "shell.execute_reply": "2024-12-09T05:28:58.263372Z",
+     "shell.execute_reply.started": "2024-12-09T05:28:58.259134Z"
     }
    },
    "outputs": [
@@ -98,15 +115,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code is executed instantaneously, since no query operations are performed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T04:24:22.902588Z",
-     "iopub.status.busy": "2024-12-09T04:24:22.902520Z",
-     "iopub.status.idle": "2024-12-09T04:24:22.912593Z",
-     "shell.execute_reply": "2024-12-09T04:24:22.912333Z",
-     "shell.execute_reply.started": "2024-12-09T04:24:22.902582Z"
+     "iopub.execute_input": "2024-12-09T05:28:58.263860Z",
+     "iopub.status.busy": "2024-12-09T05:28:58.263796Z",
+     "iopub.status.idle": "2024-12-09T05:28:58.273488Z",
+     "shell.execute_reply": "2024-12-09T05:28:58.273304Z",
+     "shell.execute_reply.started": "2024-12-09T05:28:58.263853Z"
     }
    },
    "outputs": [],
@@ -122,15 +146,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Listing the table as the last expression in a Jupyter notebook makes Jupyter try to represent the table, which triggers DuckDB do either compute the full table, or, in the case that the table has many rows, compute just enough rows to show a preview. In many instances, the preview is faster to compute.\n",
+    "\n",
+    "The following is still fast, but just a bit slower than the previous cell, since this is where the query associated with the operations above is actually performed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T04:24:22.912941Z",
-     "iopub.status.busy": "2024-12-09T04:24:22.912881Z",
-     "iopub.status.idle": "2024-12-09T04:24:22.933836Z",
-     "shell.execute_reply": "2024-12-09T04:24:22.933636Z",
-     "shell.execute_reply.started": "2024-12-09T04:24:22.912934Z"
+     "iopub.execute_input": "2024-12-09T05:28:58.273819Z",
+     "iopub.status.busy": "2024-12-09T05:28:58.273759Z",
+     "iopub.status.idle": "2024-12-09T05:28:58.295513Z",
+     "shell.execute_reply": "2024-12-09T05:28:58.295256Z",
+     "shell.execute_reply.started": "2024-12-09T05:28:58.273812Z"
     }
    },
    "outputs": [
@@ -183,11 +216,11 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T04:24:22.934168Z",
-     "iopub.status.busy": "2024-12-09T04:24:22.934103Z",
-     "iopub.status.idle": "2024-12-09T04:24:22.938364Z",
-     "shell.execute_reply": "2024-12-09T04:24:22.938139Z",
-     "shell.execute_reply.started": "2024-12-09T04:24:22.934161Z"
+     "iopub.execute_input": "2024-12-09T05:28:58.295869Z",
+     "iopub.status.busy": "2024-12-09T05:28:58.295801Z",
+     "iopub.status.idle": "2024-12-09T05:28:58.299874Z",
+     "shell.execute_reply": "2024-12-09T05:28:58.299660Z",
+     "shell.execute_reply.started": "2024-12-09T05:28:58.295862Z"
     }
    },
    "outputs": [],
@@ -209,15 +242,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even though the computation for `t2` is complex, we can compute a preview fairly quickly. The following runs in about 2 seconds on my laptop."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T04:24:22.938685Z",
-     "iopub.status.busy": "2024-12-09T04:24:22.938629Z",
-     "iopub.status.idle": "2024-12-09T04:24:24.513617Z",
-     "shell.execute_reply": "2024-12-09T04:24:24.513297Z",
-     "shell.execute_reply.started": "2024-12-09T04:24:22.938679Z"
+     "iopub.execute_input": "2024-12-09T05:28:58.300248Z",
+     "iopub.status.busy": "2024-12-09T05:28:58.300171Z",
+     "iopub.status.idle": "2024-12-09T05:28:59.907331Z",
+     "shell.execute_reply": "2024-12-09T05:28:59.907025Z",
+     "shell.execute_reply.started": "2024-12-09T05:28:58.300240Z"
     }
    },
    "outputs": [
@@ -228,29 +268,29 @@
        "│      hexid      │         ts1         │         ts2         │       amt1        │       amt2        │\n",
        "│     varchar     │      timestamp      │      timestamp      │      double       │      double       │\n",
        "├─────────────────┼─────────────────────┼─────────────────────┼───────────────────┼───────────────────┤\n",
-       "│ 8c2a1008b0231ff │ 2010-01-02 13:28:13 │ 2010-01-14 19:35:00 │               7.2 │               6.8 │\n",
-       "│ 8c2a100d6c999ff │ 2010-01-02 11:48:34 │ 2010-01-07 14:38:33 │               5.4 │               4.2 │\n",
-       "│ 8c2a100888e3dff │ 2010-01-10 14:49:00 │ 2010-01-31 12:54:00 │               5.4 │               6.2 │\n",
-       "│ 8c2a1008bb9b1ff │ 2010-01-08 14:46:12 │ 2010-01-16 13:27:51 │              19.4 │               5.8 │\n",
-       "│ 8c2a103b0374dff │ 2010-01-08 16:03:15 │ 2010-01-04 23:48:48 │              51.0 │              32.3 │\n",
-       "│ 8c2a100892491ff │ 2010-01-06 18:56:38 │ 2010-01-09 08:44:00 │              13.2 │               4.6 │\n",
-       "│ 8c2a107218303ff │ 2010-01-23 19:23:39 │ 2010-01-31 14:17:00 │              11.7 │              11.4 │\n",
-       "│ 8c2a100d65449ff │ 2010-01-07 21:26:16 │ 2010-01-21 13:30:31 │ 8.099999999999998 │              15.4 │\n",
-       "│ 8c2a100decaa1ff │ 2010-01-30 04:17:36 │ 2010-01-20 11:16:00 │               6.7 │             30.37 │\n",
-       "│ 8c2a100d66d61ff │ 2010-01-26 17:58:09 │ 2010-01-05 18:16:00 │               6.0 │               6.0 │\n",
+       "│ 8c2a1008b0231ff │ 2010-01-02 13:28:13 │ 2010-01-20 19:18:00 │               7.2 │               4.8 │\n",
+       "│ 8c2a100d6c999ff │ 2010-01-02 11:48:34 │ 2010-01-20 23:45:41 │               5.4 │               7.5 │\n",
+       "│ 8c2a100888e3dff │ 2010-01-10 14:49:00 │ 2010-01-21 20:44:00 │               5.4 │               5.9 │\n",
+       "│ 8c2a1008bb9b1ff │ 2010-01-08 14:46:12 │ 2010-01-08 07:46:27 │              19.4 │               7.8 │\n",
+       "│ 8c2a103b0374dff │ 2010-01-08 16:03:15 │ 2010-01-14 17:30:53 │              51.0 │              28.4 │\n",
+       "│ 8c2a100892491ff │ 2010-01-06 18:56:38 │ 2010-01-26 12:15:00 │              13.2 │               7.0 │\n",
+       "│ 8c2a107218303ff │ 2010-01-23 19:23:39 │ 2010-01-28 22:21:11 │              11.7 │               7.9 │\n",
+       "│ 8c2a100d65449ff │ 2010-01-07 21:26:16 │ 2010-01-28 21:20:00 │ 8.099999999999998 │              33.5 │\n",
+       "│ 8c2a100decaa1ff │ 2010-01-30 04:17:36 │ 2010-01-16 16:48:35 │               6.7 │              13.4 │\n",
+       "│ 8c2a100d66d61ff │ 2010-01-26 17:58:09 │ 2010-01-19 19:33:00 │               6.0 │               7.4 │\n",
        "│        ·        │          ·          │          ·          │                ·  │                ·  │\n",
        "│        ·        │          ·          │          ·          │                ·  │                ·  │\n",
        "│        ·        │          ·          │          ·          │                ·  │                ·  │\n",
-       "│ 8c2a100895911ff │ 2010-01-15 23:48:00 │ 2010-01-26 23:42:15 │              10.7 │               8.0 │\n",
-       "│ 8c2a100f52813ff │ 2010-01-05 17:53:29 │ 2010-01-14 16:50:57 │              32.0 │             26.17 │\n",
-       "│ 8c2a1008b3449ff │ 2010-01-29 22:29:46 │ 2010-01-02 11:40:27 │               8.5 │ 8.199999999999998 │\n",
-       "│ 8c2a1072cce63ff │ 2010-01-16 09:55:00 │ 2010-01-22 20:33:10 │               7.4 │              8.62 │\n",
-       "│ 8c2a1008b2467ff │ 2010-01-20 12:21:22 │ 2010-01-24 00:44:00 │             25.17 │              11.9 │\n",
-       "│ 8c2a100d695b7ff │ 2010-01-29 21:54:33 │ 2010-01-14 09:27:45 │               7.1 │              7.53 │\n",
-       "│ 8c2a1072192b7ff │ 2010-01-21 10:54:51 │ 2010-01-14 09:01:00 │               6.0 │               7.4 │\n",
-       "│ 8c2a1008b8d95ff │ 2010-01-04 11:48:44 │ 2010-01-27 11:04:52 │             23.89 │               8.4 │\n",
-       "│ 8c2a1008bb955ff │ 2010-01-12 05:55:51 │ 2010-01-23 15:51:00 │             60.08 │               5.2 │\n",
-       "│ 8c2a100d61407ff │ 2010-01-11 19:14:30 │ 2010-01-28 19:51:53 │               9.6 │               5.9 │\n",
+       "│ 8c2a100d61091ff │ 2010-01-16 11:24:48 │ 2010-01-06 16:23:00 │              16.6 │ 7.599999999999999 │\n",
+       "│ 8c2a100e25111ff │ 2010-01-10 14:10:00 │ 2010-01-25 19:44:00 │              32.5 │             42.14 │\n",
+       "│ 8c2a100d4c901ff │ 2010-01-16 11:13:00 │ 2010-01-13 10:50:00 │               7.2 │              11.4 │\n",
+       "│ 8c2a100898cc3ff │ 2010-01-22 20:42:00 │ 2010-01-08 07:33:00 │              10.3 │               9.8 │\n",
+       "│ 8c2a1008ba33dff │ 2010-01-11 23:40:32 │ 2010-01-30 16:44:00 │               5.9 │               5.8 │\n",
+       "│ 8c2a100d20ed7ff │ 2010-01-06 19:25:00 │ 2010-01-28 23:07:00 │              10.8 │               9.9 │\n",
+       "│ 8c2a100d216cbff │ 2010-01-31 01:11:00 │ 2010-01-29 23:08:55 │               4.3 │               5.9 │\n",
+       "│ 8c2a107219747ff │ 2010-01-28 07:56:00 │ 2010-01-31 16:11:00 │              11.0 │ 8.199999999999998 │\n",
+       "│ 8c2a100d6305bff │ 2010-01-30 15:38:00 │ 2010-01-24 15:50:00 │               9.4 │               5.4 │\n",
+       "│ 8c2a100d29261ff │ 2010-01-18 13:12:00 │ 2010-01-04 16:38:00 │               4.2 │              10.4 │\n",
        "├─────────────────┴─────────────────────┴─────────────────────┴───────────────────┴───────────────────┤\n",
        "│ ? rows (>9999 rows, 20 shown)                                                             5 columns │\n",
        "└─────────────────────────────────────────────────────────────────────────────────────────────────────┘"
@@ -262,8 +302,16 @@
     }
    ],
    "source": [
-    "# renders quickly because DuckDB is computing just a few rows to create a preview\n",
     "t2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, running `count_rows` on `t2` forces the full join operation to be performed (previously, we only computed a *partial* join to dispaly the preview). The following takes about 50 seconds on my laptop.\n",
+    "\n",
+    "Note that the row count for this intermediate table is about **10 billion rows**. We deal with the table directly here for demonstration purposes, but we as we continue the pipeline below, we will avoid ever forming this intermediate table."
    ]
   },
   {
@@ -271,11 +319,11 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T04:24:24.513985Z",
-     "iopub.status.busy": "2024-12-09T04:24:24.513912Z",
-     "iopub.status.idle": "2024-12-09T04:25:15.268479Z",
-     "shell.execute_reply": "2024-12-09T04:25:15.268172Z",
-     "shell.execute_reply.started": "2024-12-09T04:24:24.513978Z"
+     "iopub.execute_input": "2024-12-09T05:28:59.907713Z",
+     "iopub.status.busy": "2024-12-09T05:28:59.907643Z",
+     "iopub.status.idle": "2024-12-09T05:29:50.351301Z",
+     "shell.execute_reply": "2024-12-09T05:29:50.350976Z",
+     "shell.execute_reply.started": "2024-12-09T05:28:59.907705Z"
     }
    },
    "outputs": [
@@ -301,32 +349,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-12-09T04:25:15.268854Z",
-     "iopub.status.busy": "2024-12-09T04:25:15.268776Z",
-     "iopub.status.idle": "2024-12-09T04:25:15.270338Z",
-     "shell.execute_reply": "2024-12-09T04:25:15.270136Z",
-     "shell.execute_reply.started": "2024-12-09T04:25:15.268846Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# print(str(t2.rel.explain()))"
+    "Again, it is intantaneous to form the expression representing `t3`, as long as we don't need to compute the expression just yet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T04:25:15.270639Z",
-     "iopub.status.busy": "2024-12-09T04:25:15.270574Z",
-     "iopub.status.idle": "2024-12-09T04:25:15.294835Z",
-     "shell.execute_reply": "2024-12-09T04:25:15.294568Z",
-     "shell.execute_reply.started": "2024-12-09T04:25:15.270632Z"
+     "iopub.execute_input": "2024-12-09T05:29:50.351711Z",
+     "iopub.status.busy": "2024-12-09T05:29:50.351637Z",
+     "iopub.status.idle": "2024-12-09T05:29:50.373966Z",
+     "shell.execute_reply": "2024-12-09T05:29:50.373676Z",
+     "shell.execute_reply.started": "2024-12-09T05:29:50.351703Z"
     }
    },
    "outputs": [],
@@ -341,15 +379,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this is faster than the `t2.do(count_rows)`, even though it does more work! This cell runs in about 44 seconds on my laptop.\n",
+    "\n",
+    "This final result has about **29 thousand rows**, something much more reasonable to materialize directly as a Pandas dataframe, for instance."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T04:25:15.295196Z",
-     "iopub.status.busy": "2024-12-09T04:25:15.295126Z",
-     "iopub.status.idle": "2024-12-09T04:26:11.851289Z",
-     "shell.execute_reply": "2024-12-09T04:26:11.851043Z",
-     "shell.execute_reply.started": "2024-12-09T04:25:15.295188Z"
+     "iopub.execute_input": "2024-12-09T05:29:50.374291Z",
+     "iopub.status.busy": "2024-12-09T05:29:50.374229Z",
+     "iopub.status.idle": "2024-12-09T05:30:34.558145Z",
+     "shell.execute_reply": "2024-12-09T05:30:34.557929Z",
+     "shell.execute_reply.started": "2024-12-09T05:29:50.374284Z"
     }
    },
    "outputs": [
@@ -364,7 +411,7 @@
        "└──────────┘"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,15 +421,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get a Pandas dataframe in about 53 seconds."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-09T04:26:11.853050Z",
-     "iopub.status.busy": "2024-12-09T04:26:11.852806Z",
-     "iopub.status.idle": "2024-12-09T04:27:11.434159Z",
-     "shell.execute_reply": "2024-12-09T04:27:11.433927Z",
-     "shell.execute_reply.started": "2024-12-09T04:26:11.853039Z"
+     "iopub.execute_input": "2024-12-09T05:30:34.558561Z",
+     "iopub.status.busy": "2024-12-09T05:30:34.558487Z",
+     "iopub.status.idle": "2024-12-09T05:31:27.099383Z",
+     "shell.execute_reply": "2024-12-09T05:31:27.099109Z",
+     "shell.execute_reply.started": "2024-12-09T05:30:34.558553Z"
     }
    },
    "outputs": [
@@ -424,12 +478,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>8c2a107253359ff</td>\n",
+       "      <td>8c2a1072c846bff</td>\n",
        "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>8c2a100d67a93ff</td>\n",
+       "      <td>8c2a107253359ff</td>\n",
        "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -476,8 +530,8 @@
        "                 hexid    diff\n",
        "0      8c2a100d2d12bff    0.01\n",
        "1      8c2a100d2a94dff    0.02\n",
-       "2      8c2a107253359ff    0.02\n",
-       "3      8c2a100d67a93ff    0.02\n",
+       "2      8c2a1072c846bff    0.02\n",
+       "3      8c2a107253359ff    0.02\n",
        "4      8c2a100891611ff    0.02\n",
        "...                ...     ...\n",
        "28563  8c2a10aa2cb13ff  175.88\n",
@@ -489,32 +543,13 @@
        "[28568 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "t3.df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-12-09T04:27:11.434646Z",
-     "iopub.status.busy": "2024-12-09T04:27:11.434561Z",
-     "iopub.status.idle": "2024-12-09T04:27:11.436023Z",
-     "shell.execute_reply": "2024-12-09T04:27:11.435815Z",
-     "shell.execute_reply.started": "2024-12-09T04:27:11.434638Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# note the df will be different from what you'd get if you preview t3\n",
-    "# t3\n",
-    "# meh, maybe we don't care here"
    ]
   },
   {
