--- a/docs/lazy_example.ipynb
+++ b/docs/lazy_example.ipynb
@@ -352,7 +352,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, it is intantaneous to form the expression representing `t3`, as long as we don't need to compute the expression just yet."
+    "Again, it is intantaneous to form the expression representing `t3`, as long as we don't need to compute the expression just yet.\n",
+    "\n",
+    "Note that the timestamp filtering below could have also been given above as part of the join. We're free to do it either way and the performance will be identical because DuckDB will push the filters down in its query planning/optimization step."
    ]
   },
   {
@@ -557,7 +559,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO: get a polars dataframe"
+   ]
   }
  ],
  "metadata": {
