--- a/docs/tut_lazy.ipynb
+++ b/docs/tut_lazy.ipynb
@@ -2,10 +2,14 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
-    "title: Lazy Expression Tutorial\n",
+    "title: Lazy Evaluation Tutorial\n",
     "---"
    ]
   },
