--- a/docs/ramble.qmd
+++ b/docs/ramble.qmd
@@ -32,3 +32,7 @@ An alternative Python DataFrame library for SQL gremlins.
 - maybe you lose some IDE and typing support, but I think you get a big win in terms of REPL/notebook programming (which is where i spend most of my time)
 
 or, an experiment in [https://en.wiktionary.org/wiki/Cunningham%27s_Law]()
+
+Darkwing is a *small* DataFrame library...
+
+Darkwing is etc. It is *small*, in that it is a light wrapper around the DuckDB API. Not much to learn and the library gets out of your way.
