--- a/docs/fsq.ipynb
+++ b/docs/fsq.ipynb
@@ -1,16 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "8e320c03-523b-4796-8e0a-0815f615ca23",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Foursquare POI Data Example\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8944d7df-5176-4925-b900-926b15130998",
+   "metadata": {},
+   "source": [
+    "Foursquare has [recently released](https://opensource.foursquare.com/os-places/) an interesting Point of Interest (POI) Dataset, which is what we will play with in this example.\n",
+    "\n",
+    "Fused.io has made that data [readily available](https://docs.fused.io/blog/fused-public-udf-for-foursquare-pois/), through [Source Cooperative](https://source.coop/) which is how we will access it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ce206c85-6d07-4139-8d10-392fdf598002",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T04:57:15.527521Z",
-     "iopub.status.busy": "2024-12-15T04:57:15.527350Z",
-     "iopub.status.idle": "2024-12-15T04:57:15.601179Z",
-     "shell.execute_reply": "2024-12-15T04:57:15.600874Z",
-     "shell.execute_reply.started": "2024-12-15T04:57:15.527502Z"
+     "iopub.execute_input": "2024-12-15T05:20:02.463963Z",
+     "iopub.status.busy": "2024-12-15T05:20:02.463568Z",
+     "iopub.status.idle": "2024-12-15T05:20:02.536787Z",
+     "shell.execute_reply": "2024-12-15T05:20:02.536495Z",
+     "shell.execute_reply.started": "2024-12-15T05:20:02.463938Z"
     }
    },
    "outputs": [],
@@ -19,23 +39,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e2b180fd-e144-45fb-94de-69aad8767fc2",
+   "metadata": {},
+   "source": [
+    "# Load the data\n",
+    "\n",
+    "We can download the data with `darkwing` and save it to a file for quick iteration."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "be52415e-dd87-4438-b969-f8c0245d8864",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T04:57:15.601606Z",
-     "iopub.status.busy": "2024-12-15T04:57:15.601531Z",
-     "iopub.status.idle": "2024-12-15T04:57:31.784361Z",
-     "shell.execute_reply": "2024-12-15T04:57:31.784059Z",
-     "shell.execute_reply.started": "2024-12-15T04:57:15.601599Z"
+     "iopub.execute_input": "2024-12-15T05:20:02.537139Z",
+     "iopub.status.busy": "2024-12-15T05:20:02.537067Z",
+     "iopub.status.idle": "2024-12-15T05:20:15.028128Z",
+     "shell.execute_reply": "2024-12-15T05:20:15.027784Z",
+     "shell.execute_reply.started": "2024-12-15T05:20:02.537132Z"
     }
    },
    "outputs": [],
    "source": [
-    "# NOTE: Comment out the first two lines once you have the data saved locally\n",
+    "# NOTE: You can comment out the following two lines once\n",
+    "# you have the data saved locally to avoid downloading it again\n",
     "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/10.parquet')\n",
     "t.save('data/fsq_places_10.parquet')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7445de57-9df3-411f-b611-2cde41297264",
+   "metadata": {},
+   "source": [
+    "With the data saved to a file, we can create a `darkwing` table from a local Parquet file."
    ]
   },
   {
@@ -44,11 +83,11 @@
    "id": "e29711c7-de6f-4a3f-b9ac-9b41c3fb0a74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T04:57:31.785426Z",
-     "iopub.status.busy": "2024-12-15T04:57:31.785352Z",
-     "iopub.status.idle": "2024-12-15T04:57:31.787313Z",
-     "shell.execute_reply": "2024-12-15T04:57:31.787035Z",
-     "shell.execute_reply.started": "2024-12-15T04:57:31.785418Z"
+     "iopub.execute_input": "2024-12-15T05:20:15.029231Z",
+     "iopub.status.busy": "2024-12-15T05:20:15.029155Z",
+     "iopub.status.idle": "2024-12-15T05:20:15.031135Z",
+     "shell.execute_reply": "2024-12-15T05:20:15.030933Z",
+     "shell.execute_reply.started": "2024-12-15T05:20:15.029222Z"
     }
    },
    "outputs": [],
@@ -57,16 +96,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb4534db-b71a-4559-8ff5-c6e1e9c25ec6",
+   "metadata": {},
+   "source": [
+    "# Data processing\n",
+    "\n",
+    "As noted elsewhere in the docs, we can store data operations in multiple ways. For example, as Python functions or as a list of SQL snippet strings. Here are some examples."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "2caf7d88-e55e-4b74-9f68-076c31bfd5c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T04:57:31.787628Z",
-     "iopub.status.busy": "2024-12-15T04:57:31.787559Z",
-     "iopub.status.idle": "2024-12-15T04:57:31.789238Z",
-     "shell.execute_reply": "2024-12-15T04:57:31.789072Z",
-     "shell.execute_reply.started": "2024-12-15T04:57:31.787620Z"
+     "iopub.execute_input": "2024-12-15T05:20:15.031466Z",
+     "iopub.status.busy": "2024-12-15T05:20:15.031393Z",
+     "iopub.status.idle": "2024-12-15T05:20:15.033252Z",
+     "shell.execute_reply": "2024-12-15T05:20:15.032976Z",
+     "shell.execute_reply.started": "2024-12-15T05:20:15.031458Z"
     }
    },
    "outputs": [],
@@ -81,11 +130,29 @@
     "        'select h3_h3_to_string(hexid) as hexid',\n",
     "    ]\n",
     "\n",
-    "# A SQL procedure stored as a list of SQL snippet strings\n",
+    "# A data processing procedure stored as a list of SQL snippet strings\n",
     "count_and_order = [\n",
     "    'select hexid, count(*) as num group by 1',\n",
     "    'order by num',\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f91748a-8f54-45f5-9395-cad8ade83a1b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-15T05:17:49.743476Z",
+     "iopub.status.busy": "2024-12-15T05:17:49.742797Z",
+     "iopub.status.idle": "2024-12-15T05:17:49.748378Z",
+     "shell.execute_reply": "2024-12-15T05:17:49.747452Z",
+     "shell.execute_reply.started": "2024-12-15T05:17:49.743424Z"
+    }
+   },
+   "source": [
+    "# Parameterized evaluation\n",
+    "\n",
+    "With our core data transformation logic defined and parameterized, we can run the same transformation over the data at different H3 resolutions."
    ]
   },
   {
@@ -94,11 +161,11 @@
    "id": "4ef608db-485f-4f8b-9672-66fe44975df2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T04:57:31.789587Z",
-     "iopub.status.busy": "2024-12-15T04:57:31.789518Z",
-     "iopub.status.idle": "2024-12-15T04:57:31.855456Z",
-     "shell.execute_reply": "2024-12-15T04:57:31.855243Z",
-     "shell.execute_reply.started": "2024-12-15T04:57:31.789580Z"
+     "iopub.execute_input": "2024-12-15T05:20:15.033597Z",
+     "iopub.status.busy": "2024-12-15T05:20:15.033534Z",
+     "iopub.status.idle": "2024-12-15T05:20:15.108743Z",
+     "shell.execute_reply": "2024-12-15T05:20:15.108496Z",
+     "shell.execute_reply.started": "2024-12-15T05:20:15.033590Z"
     }
    },
    "outputs": [
@@ -128,11 +195,11 @@
    "id": "ab71ac22-9a78-4fad-8499-e3238aaa841a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T04:57:31.855814Z",
-     "iopub.status.busy": "2024-12-15T04:57:31.855749Z",
-     "iopub.status.idle": "2024-12-15T04:57:31.930390Z",
-     "shell.execute_reply": "2024-12-15T04:57:31.930149Z",
-     "shell.execute_reply.started": "2024-12-15T04:57:31.855806Z"
+     "iopub.execute_input": "2024-12-15T05:20:15.109098Z",
+     "iopub.status.busy": "2024-12-15T05:20:15.109026Z",
+     "iopub.status.idle": "2024-12-15T05:20:15.187329Z",
+     "shell.execute_reply": "2024-12-15T05:20:15.187095Z",
+     "shell.execute_reply.started": "2024-12-15T05:20:15.109090Z"
     }
    },
    "outputs": [
@@ -168,11 +235,11 @@
    "id": "524b6130-94e0-4c1a-b2c1-0ee079ff3ccd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T04:57:31.930709Z",
-     "iopub.status.busy": "2024-12-15T04:57:31.930648Z",
-     "iopub.status.idle": "2024-12-15T04:57:32.012248Z",
-     "shell.execute_reply": "2024-12-15T04:57:32.012041Z",
-     "shell.execute_reply.started": "2024-12-15T04:57:31.930702Z"
+     "iopub.execute_input": "2024-12-15T05:20:15.187699Z",
+     "iopub.status.busy": "2024-12-15T05:20:15.187629Z",
+     "iopub.status.idle": "2024-12-15T05:20:15.269445Z",
+     "shell.execute_reply": "2024-12-15T05:20:15.269250Z",
+     "shell.execute_reply.started": "2024-12-15T05:20:15.187691Z"
     }
    },
    "outputs": [
