feels more organized

--- a/docs/tut_fsq.ipynb
+++ b/docs/tut_fsq.ipynb
@@ -3,10 +3,17 @@
   {
    "cell_type": "raw",
    "id": "8e320c03-523b-4796-8e0a-0815f615ca23",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: Foursquare POI Data Example\n",
+    "format:\n",
+    "  html:\n",
+    "    toc: true\n",
     "---"
    ]
   },
@@ -43,7 +50,7 @@
    "id": "e2b180fd-e144-45fb-94de-69aad8767fc2",
    "metadata": {},
    "source": [
-    "# Load the data\n",
+    "## Load the data\n",
     "\n",
     "We can download the data with `darkwing` and save it to a file for quick iteration."
    ]
@@ -100,7 +107,7 @@
    "id": "eb4534db-b71a-4559-8ff5-c6e1e9c25ec6",
    "metadata": {},
    "source": [
-    "# Data processing\n",
+    "## Data processing\n",
     "\n",
     "As noted elsewhere in the docs, we can store data operations in multiple ways. For example, as Python functions or as a list of SQL snippet strings. Here are some examples."
    ]
@@ -150,7 +157,7 @@
     }
    },
    "source": [
-    "# Parameterized evaluation\n",
+    "## Parameterized evaluation\n",
     "\n",
     "With our core data transformation logic defined and parameterized, we can run the same transformation over the data at different H3 resolutions."
    ]
