--- a/docs/tut_lazy.ipynb
+++ b/docs/tut_lazy.ipynb
@@ -10,6 +10,9 @@
    "source": [
     "---\n",
     "title: Lazy Evaluation Tutorial\n",
+    "format:\n",
+    "  html:\n",
+    "    toc: true\n",
     "---"
    ]
   },
@@ -17,6 +20,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introduction\n",
+    "\n",
     "Since `darkwing` is based on the DuckDB relational API, all expressions are \"lazy\" in that they defer evaluation until a result or a data preview is requested.\n",
     "This allows us to build up complex data processing pipelines iteratively, but without needing to compute extranous intermediate results. Instead, under the hood, DuckDB will gather the sequence of steps and pass it to a query optimizer, which will apply optimizations like predicate and projection pushdown. The full operation will be executed by DuckDB making full use of all the cores available on your machine, streaming the operations if possible, and even spilling to disk if the operation is too large to fit in memory."
    ]
@@ -153,6 +158,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Lazy operations\n",
+    "\n",
     "Listing the table as the last expression in a Jupyter notebook makes Jupyter try to represent the table, which triggers DuckDB do either compute the full table, or, in the case that the table has many rows, compute just enough rows to show a preview. In many instances, the preview is faster to compute.\n",
     "\n",
     "The following is still fast, but just a bit slower than the previous cell, since this is where the query associated with the operations above is actually performed."
@@ -313,6 +320,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Avoiding Expensive Intermediates\n",
+    "\n",
     "However, running `count_rows` on `t2` forces the full join operation to be performed (previously, we only computed a *partial* join to dispaly the preview). The following takes about 50 seconds on my laptop.\n",
     "\n",
     "Note that the row count for this intermediate table is about **10 billion rows**. We deal with the table directly here for demonstration purposes, but we as we continue the pipeline below, we will avoid ever forming this intermediate table."
@@ -388,7 +397,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that this is faster than the `t2.do(count_rows)`, even though it does more work! This cell runs in about 44 seconds on my laptop.\n",
+    "Note that this is faster than the `t2.do(count_rows)`, even though it does more work! This cell runs in about 44 seconds on my laptop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Materialize smaller results\n",
     "\n",
     "This final result has about **29 thousand rows**, something much more reasonable to materialize directly as a Pandas dataframe, for instance."
    ]
